Some error handling has been added

--- a/rose_cassidy.ini
+++ b/rose_cassidy.ini
@@ -1,10 +1,8 @@
-[DEFAULT]
+[camera_settings]
 Resolution = 1920, 1080
-
-#Time between pictures
 SleepTime = 1
+FrameCount = 5
 
-#
-FrameCount = 0
 
-FrameStop = 300
+
+
