--- a/rose_cassidy.ini
+++ b/rose_cassidy.ini
@@ -1,7 +1,12 @@
 [camera_settings]
 Resolution = 1920, 1080
+
+[photos_settings]
 SleepTime = 1
 FrameCount = 5
+
+[environment_settings]
+Movie_dir = ~/rose_cassidy/completed/
 
 
 
