Initial data setup process changed: init_data function and global constants removed

--- a/rose_cassidy.ini
+++ b/rose_cassidy.ini
@@ -1,12 +1,12 @@
-[camera_settings]
-Resolution = 1920, 1080
+[Camera]
+resolution = 1920, 1080
 
-[photos_settings]
-SleepTime = 1
-FrameCount = 5
+[Photos]
+sleep_time = 1
+frame_count = 5
 
-[environment_settings]
-Movie_dir =  /movie_ready/
+[Environment]
+movie_dir =  /movie_ready/
 
 
 
